sqlxo_macros/tests/try/err/missing_fromrow.stderr
error[E0277]: the trait bound `for<'r> T: sqlx_core::from_row::FromRow<'r, sqlx_postgres::row::PgRow>` is not satisfied
 --> tests/try/err/missing_fromrow.rs:5:12
  |
5 | pub struct T {
  |            ^ the trait `for<'r> sqlx_core::from_row::FromRow<'r, sqlx_postgres::row::PgRow>` is not implemented for `T`
  |
  = help: the following other types implement trait `sqlx_core::from_row::FromRow<'r, R>`:
            ()
            (T1, T2)
            (T1, T2, T3)
            (T1, T2, T3, T4)
            (T1, T2, T3, T4, T5)
            (T1, T2, T3, T4, T5, T6)
            (T1, T2, T3, T4, T5, T6, T7)
            (T1, T2, T3, T4, T5, T6, T7, T8)
          and $N others
  = note: required for `<T as QueryContext>::Model` to implement `QueryModel`
note: required by a bound in `sqlxo_traits::QueryContext::Model`
 --> $WORKSPACE/sqlxo_traits/src/core.rs
  |
  |     type Model: QueryModel;
  |                 ^^^^^^^^^^ required by this bound in `QueryContext::Model`

error[E0277]: the trait bound `for<'r> T: sqlx_core::from_row::FromRow<'r, sqlx_postgres::row::PgRow>` is not satisfied
 --> tests/try/err/missing_fromrow.rs:5:12
  |
5 | pub struct T {
  |            ^ the trait `for<'r> sqlx_core::from_row::FromRow<'r, sqlx_postgres::row::PgRow>` is not implemented for `T`
  |
  = help: the following other types implement trait `sqlx_core::from_row::FromRow<'r, R>`:
            ()
            (T1, T2)
            (T1, T2, T3)
            (T1, T2, T3, T4)
            (T1, T2, T3, T4, T5)
            (T1, T2, T3, T4, T5, T6)
            (T1, T2, T3, T4, T5, T6, T7)
            (T1, T2, T3, T4, T5, T6, T7, T8)
          and $N others
  = note: required for `<TQuery as Filterable>::Entity` to implement `QueryModel`
note: required by a bound in `sqlxo_traits::Filterable::Entity`
 --> $WORKSPACE/sqlxo_traits/src/core.rs
  |
  |     type Entity: QueryModel;
  |                  ^^^^^^^^^^ required by this bound in `Filterable::Entity`

error[E0277]: the trait bound `for<'r> T: sqlx_core::from_row::FromRow<'r, sqlx_postgres::row::PgRow>` is not satisfied
 --> tests/try/err/missing_fromrow.rs:5:12
  |
5 | pub struct T {
  |            ^ the trait `for<'r> sqlx_core::from_row::FromRow<'r, sqlx_postgres::row::PgRow>` is not implemented for `T`
  |
  = help: the following other types implement trait `sqlx_core::from_row::FromRow<'r, R>`:
            ()
            (T1, T2)
            (T1, T2, T3)
            (T1, T2, T3, T4)
            (T1, T2, T3, T4, T5)
            (T1, T2, T3, T4, T5, T6)
            (T1, T2, T3, T4, T5, T6, T7)
            (T1, T2, T3, T4, T5, T6, T7, T8)
          and $N others
  = note: required for `<TSort as Sortable>::Entity` to implement `QueryModel`
note: required by a bound in `sqlxo_traits::Sortable::Entity`
 --> $WORKSPACE/sqlxo_traits/src/core.rs
  |
  |     type Entity: QueryModel;
  |                  ^^^^^^^^^^ required by this bound in `Sortable::Entity`
